--- a/app/globals.css
+++ b/app/globals.css
@@ -44,11 +44,11 @@ body {
 }
 
 .ton-table td {
-  @apply py-4 px-4 border-t border-gray-100;
+  @apply py-2 px-4 border-t border-gray-50;
 }
 
 .ton-table tr:hover {
-  @apply bg-gray-50;
+  @apply bg-blue-50;
 }
 
 .container {
